[workspace]
members = [
    "core",
    "executor",

    "runtime",
    "runtime/precompiles/blake2",
    "runtime/precompiles/bn128",
    "runtime/precompiles/curve25519",
    "runtime/precompiles/ed25519",
    "runtime/precompiles/modexp",
    "runtime/precompiles/sha3fips",
    "runtime/precompiles/simple",
]

