[workspace]
resolver = "2"

members = [
  "core",

  # "consensus/dev",

  "execution/op-geth",

  "libs/jsonrpc",
  "libs/service",
  "libs/node",

  "sequencer/fifo",

  # "node/devnode",
]

[workspace.dependencies]
fluct-core = { version = "0.1", path = "core", default-feature = false }
fluct-jsonrpc = { version = "0.1", path = "libs/jsonrpc", default-feature = false }
fluct-service = { version = "0.1", path = "libs/service", default-feature = false }

# foundational
async-trait = "0.1.73"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

# ethers
ethers-core = "2.0.9"

# error handling
anyhow = "1.0.75"
thiserror = "1.0.47"

tokio = "1.32.0"
