[package]
name = "fluct-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = { version = "0.5.2", default-features = false }

thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

ethereum = { version = "0.14.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }
bytes = { version = "1.3.0", default-features = false }
