[package]
name = "fluct-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
ethers-core = "2.0.9"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
fluct-jsonrpc = { version = "0.1", path = "../libs/jsonrpc" }
thiserror = "1.0.47"
