[package]
name = "fluct-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluct-jsonrpc.workspace = true

log.workspace = true
async-trait.workspace = true
ethers-core.workspace = true
serde.workspace = true
thiserror.workspace = true
ethereum = "0.14.0"
