[package]
name = "fluct-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.12.1"

evm = "0.37.0"

fluct-core = { version = "0.1", path = "../core" }

# precompile
fluct-evm-precompile-simple = { version = "0.1", path = "./precompiles/simple" }
fluct-evm-precompile-modexp = { version = "0.1", path = "./precompiles/modexp" }
fluct-evm-precompile-bn128 = { version = "0.1", path = "./precompiles/bn128" }
fluct-evm-precompile-blake2 = { version = "0.1", path = "./precompiles/blake2" }
fluct-evm-precompile-sha3fips = { version = "0.1", path = "./precompiles/sha3fips" }
fluct-evm-precompile-curve25519 = { version = "0.1", path = "./precompiles/curve25519" }
fluct-evm-precompile-ed25519 = { version = "0.1", path = "./precompiles/ed25519" }
ethereum = "0.14.0"
thiserror = "1.0.37"

[features]
default = []
tracing = ["evm/tracing"]

