[package]
name = "fluct-consensus-single"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluct-core.workspace = true
fluct-service.workspace = true

thiserror.workspace = true
async-trait.workspace = true
ethers-core.workspace = true
ethers-signers.workspace = true
