[package]
name = "fluct-op-geth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true

fluct-core.workspace = true
fluct-jsonrpc.workspace = true

ethers-core = { workspace = true, features = ["optimism"] }

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

rust-embed = { version = "8.0.0", features = [
  "include-exclude",
  "interpolate-folder-path",
] }
subprocess = "0.2.9"
tempfile = "3.8.0"
rand = "0.8.5"
hex = "0.4.3"

[build-dependencies]
attohttpc = "0.26.1"

[dev-dependencies]
env_logger = "0.10.0"
