[package]
name = "fluct-jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "tcp"] }
jsonwebtoken = "8.3.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
time = "0.3.28"
