[package]
name = "fluct-jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

http = "0.2.9"
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "tcp"] }
jsonwebtoken = "8.3.0"
time = "0.3.28"
