[package]
name = "fluct-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluct-core.workspace = true

async-trait.workspace = true
log.workspace = true

tokio.workspace = true

getset = "0.1.2"
tokio-scoped = "0.2.0"
