[package]
name = "fluct-seqencer-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
ethers-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

fluct-core.workspace = true
fluct-service.workspace = true
