[package]
name = "fluct-evm-precompile-blake2"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "BLAKE2 precompiles for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
evm = { version = "0.37", default-features = false }

