[package]
name = "fluct-evm-precompile-bn128"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "BN128 precompiles for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
primitive-types = "0.12.1"

evm = { version = "0.37", default-features = false }

bn = { package = "substrate-bn", version = "0.6", default-features = false }

