[package]
name = "fluct-evm-precompile-ed25519"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "ED25519 precompiles for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
evm = "0.37.0"

ed25519-dalek = { version = "1.0.0", default-features = false, features = ["alloc", "u64_backend"] }

