[package]
name = "fluct-evm-precompile-sha3fips"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Drew Stone <drew@commonwealth.im>"]
edition = "2021"
license = "Apache-2.0"
description = "SHA3 FIPS202 precompile for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
digest = "0.10.6"
evm = { version = "0.37", default-features = false }
sha3 = "0.10.6"

