[package]
name = "fluct-evm-precompile-simple"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Simple precompiles for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
digest = "0.10.6"
evm = { version = "0.37", default-features = false }
k256 = { version = "0.11.6", default-features = false, features = ["ecdsa", "ecdsa-core"] }

ripemd = { version = "0.1", default-features = false }
sha2 = "0.10.6"
sha3 = "0.10.6"

