[package]
name = "pallet-evm-precompile-modexp"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "MODEXP precompiles for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
evm = "0.37.0"

num = { version = "0.4", default-features = false, features = ["alloc"] }

